--- a/index.html
+++ b/index.html
@@ -18,49 +18,46 @@
 				width: 100%;
 				color: #ffffff;
 			}
-
 		</style>
 	</head>
 	<body>
 
-		<div id="container"></div>
+	<div id="container"></div>
 
-		<script src="js/three.js"></script>
-		<script src="js/orbit-controls.js"></script>
-		<script src="js/OBJLoader.js"></script>
+	<script src="js/three.js"></script>
+	<script src="js/orbit-controls.js"></script>
+	<script src="js/OBJLoader.js"></script>
 
   <script id="vertexShader" type="x-shader/x-vertex">
 
-
 	uniform mat4 modelMatrix;
 	uniform mat4 viewMatrix;
-      	uniform mat4 projectionMatrix;
+	uniform mat4 projectionMatrix;
 
-     	attribute vec3 position; 
-     	attribute vec2 uv;
+	attribute vec3 position; 
+	attribute vec2 uv;
 
 	varying vec2 vUV;
 
 	void main() {
 
-        	vec4 position = viewMatrix * modelMatrix * vec4(position, 1.0);
-	   	vUV = uv; 
-        	gl_Position = projectionMatrix * position; 
-     	 }
+		vec4 position = viewMatrix * modelMatrix * vec4(position, 1.0);
+		vUV = uv; 
+		gl_Position = projectionMatrix * position; 
+	 }
 
-    </script>
+  </script>
 
-
-    <script id="fragmentShader" type="x-shader/x-fragment">
+  <script id="fragmentShader" type="x-shader/x-fragment">
 
 	precision mediump float;
 	uniform sampler2D t1;
 	varying vec2 vUV;
 
-      	void main() {
+	void main() {
 		//vec4 c1 = texture2D(t1, vUV);
 		//vec4 c2 = vec4(0.0,1.0,0.0,1.0);
-        	gl_FragColor = vec4(1.0,1.0,1.0, 1.0);//c1; //, c2, 0.5);
+		gl_FragColor = vec4(1.0,1.0,1.0, 1.0);//c1; //, c2, 0.5);
 	}
 
 	</script>
@@ -70,7 +67,7 @@
 
 		// Load shaders
 		var vs = document.getElementById( 'vertexShader' ).textContent;
-      	var fs = document.getElementById( 'fragmentShader' ).textContent;
+		var fs = document.getElementById( 'fragmentShader' ).textContent;
 
 		// Declare variables
 		var container;
@@ -108,12 +105,10 @@
 				mesh.position.set( 0, -1.5, 0 );
 
 				scene.add( mesh );
-
-
 		}
 		
 		// Process lid
-		function processLidObject(geometry,materials
+		function processLidObject(geometry,materials) {
 		//var useGeometry = new THREE.BufferGeometry().fromGeometry( geometry );
 				var useGeometry = geometry;
 
@@ -134,8 +129,6 @@
 				//positioning and scaling blender obj so that it's in the center of the screen
 
 				scene.add( mesh );
-
-
 		}
 
 		function init() {
@@ -143,8 +136,8 @@
 			container = document.getElementById( 'container' );
 
 			camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, 2000 );
-				var controls = new THREE.OrbitControls( camera );
-				camera.position.set( 0, 0, 5 );
+			var controls = new THREE.OrbitControls( camera );
+			camera.position.set( 0, 0, 5 );
 
 			controls.update();
 
@@ -152,7 +145,7 @@
 			scene.fog = new THREE.FogExp2( 0x000000, 0.035 );
 
 
-			texture1 = new THREE.TextureLoader().load( 'myImage.jpg' );
+			// texture1 = new THREE.TextureLoader().load( 'myImage.jpg' );
 			//texture1 = createDataTexture();
 
 			var loader = new THREE.JSONLoader();
